[tool.poetry]
name = "shm-server"
version = "0.1.0"
description = "The official Self Host Music server software."
authors = ["DrgnFireYellow <86269995+DrgnFireYellow@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "shm_server"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
